@@ -80,61 +80,99 @@ public class NotificationServiceImpl implements NotificationService {
     }
 
     @Override
-    public void sendNotification(String title, String message, String type, List<String> segments, LocalDateTime scheduledAt) {
-        Set<User> targetUsers = new HashSet<>();
+    public int sendNotification(String title, String message, String type, List<String> segments, LocalDateTime scheduledAt) {
+        Map<Integer, User> targetUsers = new LinkedHashMap<>();
         LocalDate today = LocalDate.now();
         LocalDateTime cutoffNewUser = LocalDateTime.now().minusDays(7);
         List<User> activeUsers = userRepository.findByStatusIgnoreCase("Active");
+        List<User> activeCustomers = activeUsers.stream()
+                .filter(this::isCustomer)
+                .toList();
+        Set<Integer> premiumUserIds = userMembershipRepository.findActiveMemberships("Active", today)
+                .stream()
+                .map(UserMembership::getUser)
+                .filter(Objects::nonNull)
+                .map(User::getUserId)
+                .filter(Objects::nonNull)
+                .collect(Collectors.toSet());
 
         for (String segment : segments) {
-            switch (segment.toLowerCase()) {
+            if (segment == null) continue;
+            switch (segment.trim().toLowerCase(Locale.ROOT)) {
                 case "all":
                 case "all users":
-                    targetUsers.addAll(activeUsers);
+                    addUsers(targetUsers, activeUsers);
                     break;
                 case "admin":
                 case "admin users":
-                    targetUsers.addAll(activeUsers.stream()
-                            .filter(u -> "Admin".equalsIgnoreCase(u.getRole().getName()))
-                            .collect(Collectors.toList()));
+                    addUsers(targetUsers, activeUsers.stream()
+                            .filter(this::isOperationsUser)
+                            .toList());
                     break;
                 case "premium":
                 case "premium users":
-                    List<UserMembership> activeMemberships = userMembershipRepository.findActiveMemberships("Active", today);
-                    for (UserMembership um : activeMemberships) {
-                        targetUsers.add(um.getUser());
-                    }
+                    addUsers(targetUsers, activeCustomers.stream()
+                            .filter(user -> premiumUserIds.contains(user.getUserId()))
+                            .toList());
                     break;
                 case "free":
                 case "free users":
-                    List<User> activePremiumUsers = userMembershipRepository.findActiveMemberships("Active", today)
-                            .stream().map(UserMembership::getUser).collect(Collectors.toList());
-                    for (User u : activeUsers) {
-                        if (!activePremiumUsers.contains(u)) {
-                            targetUsers.add(u);
-                        }
-                    }
+                    addUsers(targetUsers, activeCustomers.stream()
+                            .filter(user -> !premiumUserIds.contains(user.getUserId()))
+                            .toList());
                     break;
                 case "new":
                 case "new users":
-                    targetUsers.addAll(activeUsers.stream()
+                    addUsers(targetUsers, activeCustomers.stream()
                             .filter(u -> u.getCreatedAt() != null && u.getCreatedAt().isAfter(cutoffNewUser))
-                            .collect(Collectors.toList()));
+                            .toList());
                     break;
             }
         }
 
         List<Notification> notificationsToSave = new ArrayList<>();
-        for (User targetUser : targetUsers) {
-            Notification n = new Notification();
-            n.setUser(targetUser);
-            n.setTitle(title);
-            n.setMessage(message);
-            n.setType(type);
-            n.setRead(false);
-            n.setScheduledAt(scheduledAt);
-            notificationsToSave.add(n);
+        for (User targetUser : targetUsers.values()) {
+            notificationsToSave.add(buildNotification(targetUser, title, message, type, scheduledAt));
         }
         notificationRepository.saveAll(notificationsToSave);
+        return notificationsToSave.size();
+    }
+
+    @Override
+    public Notification sendToUser(User user, String title, String message, String type) {
+        if (user == null || user.getUserId() == null) {
+            throw new IllegalArgumentException("Notification recipient is required");
+        }
+        return notificationRepository.save(buildNotification(user, title, message, type, null));
+    }
+
+    private Notification buildNotification(User user, String title, String message,
+                                           String type, LocalDateTime scheduledAt) {
+        Notification notification = new Notification();
+        notification.setUser(user);
+        notification.setTitle(title);
+        notification.setMessage(message);
+        notification.setType(type);
+        notification.setRead(false);
+        notification.setScheduledAt(scheduledAt);
+        return notification;
+    }
+
+    private void addUsers(Map<Integer, User> targets, Collection<User> users) {
+        users.stream()
+                .filter(Objects::nonNull)
+                .filter(user -> user.getUserId() != null)
+                .forEach(user -> targets.put(user.getUserId(), user));
+    }
+
+    private boolean isCustomer(User user) {
+        return user.getRole() != null && "Customer".equalsIgnoreCase(user.getRole().getName());
+    }
+
+    private boolean isOperationsUser(User user) {
+        if (user.getRole() == null || user.getRole().getName() == null) return false;
+        String role = user.getRole().getName().replace("_", "").replace(" ", "");
+        return Set.of("admin", "manager", "branchmanager", "staff")
+                .contains(role.toLowerCase(Locale.ROOT));
     }
 }
